# record-player

./: .gitignore  Cargo.toml  README.md  deploy.sh  local.sh
backend/: app.py  spotapi.py  spotify-api.py
docs/: helpful-links.txt  how-to-use-spotify-api.txt  rfid-sector-setup.txt  spotify-uri-notes.txt  what-to-put-in-frontend.txt
frontend/: index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  main.rs
frontend/src/components/: BackendApi.js  CredentialLogin.js
player/: Cargo.toml
player/src/: main.rs  spotify.rs
spotify-api/: Cargo.toml
spotify-api/src/: lib.rs
spotify-lib/: Cargo.toml
spotify-lib/src/: lib.rs
src/: main.rs  spotify.rs
webserver/: Cargo.toml
webserver/src/: environment.rs  main.rs
