[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = { version = "0.3.*" }
tokio = { version = "1", features = ["full"] } # For async stuff
open = "2.0.2"
dotenv = "0.15.0"
