[package]
name = "spotify-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.4.0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
dotenv = "0.15.0"