[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# My Libs
spotify-lib = { path = "../spotify-lib" }

# 3rd Party Libs
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
